Ver 0.0.3 -- Created UI for game screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:exported="true">
         </activity>
         <activity
-            android:name=".ContinueGame"
+            android:name=".GameScreen"
             android:exported="true">
         </activity>
         <activity
